# reaper-mcp

./: .gitignore  README.md  config.json  create_drum_kit_actions.py  create_tracks_fixed.py  custom_mcp_server.py  http_server.py  osc_mcp_server.py  pyproject.toml  run_http_server.py  setup_reaper_osc.py  setup_reaper_python.py  simple_mcp_server.py  smithery.yaml  start_osc_mcp.sh  start_reaper_mcp.sh  windsurf_mcp_server.py
examples/: create_drum_pattern.py  test_mcp_tools.py  test_osc_mcp.py
scripts/: enable_reapy.py  start_reaper_mcp_server.bat  start_reaper_mcp_server.ps1  start_reaper_mcp_server.sh
src/reaper_mcp/: __init__.py  __main__.py  analysis_tools.py  audio_tools.py  config.py  fx_tools.py  mastering_tools.py  midi_tools.py  mixing_tools.py  osc_server.py  project_tools.py  render_tools.py  server.py  track_tools.py
